--- a/главная.html
+++ b/главная.html
@@ -41,7 +41,7 @@
     <!-- Карточка 1 -->
     <div class="card">
         <a href="ссылка-на-страницу-товара1" class="card-link">
-            <img src="img1.jpg" alt="Костюм">
+            <img src="img1.jpg" alt="Товар 1">
             <div class="container">
                 <h4><b>Товар 1</b></h4>
                 <p>Описание товара 1</p>
