--- a/katalog.html
+++ b/katalog.html
@@ -30,180 +30,59 @@
     <div class="popular-section-h2">
     <h2>Каталог</h2>
 </div>
-
-<div class="popular-section">
-    <!-- Карточка 1 -->
-    <div class="card">
-        <a href="ссылка-на-страницу-товара1" class="card-link">
-            <img src="img1.jpg" alt="Товар 1">
-            <div class="container">
-                <h4><b>Товар 1</b></h4>
-                <p>Описание товара 1</p>
-            </div>
-        </a>
-    </div>
-    <!-- Карточка 2 -->
-    <div class="card">
-        <a href="ссылка-на-страницу-товара2"class="card-link">
-            <img src="img2.jpg" alt="Товар 2">
-            <div class="container">
-                <h4><b>Товар 2</b></h4>
-                <p>Описание товара 2</p>
-            </div>
-        </a>
-    </div>
-    <!-- Карточка 3 -->
-    <div class="card">
-        <a href="ссылка-на-страницу-товара3"class="card-link">
-            <img src="img3.jpg" alt="Товар 3">
-            <div class="container">
-                <h4><b>Товар 3</b></h4>
-                <p>Описание товара 3</p>
-            </div>
-        </a>
-    </div>
-    <!-- Карточка 4 -->
-    <div class="card">
-        <a href="ссылка-на-страницу-товара4" class="card-link">
-            <img src="img4.jpg" alt="Товар 4">
-            <div class="container">
-                <h4><b>Товар 4</b></h4>
-                <p>Описание товара 4</p>
-            </div>
-        </a>
-    </div>
-    <!-- Карточка 5 -->
-    <div class="card">
-        <a href="ссылка-на-страницу-товара5" class="card-link">
-            <img src="img5.jpg" alt="Товар 5">
-            <div class="container">
-                <h4><b>Товар 5</b></h4>
-                <p>Описание товара 5</p>
-            </div>
-        </a>
-    </div>
-    <!-- Карточка 6 -->
-    <div class="card">
-        <a href="ссылка-на-страницу-товара6" class="card-link">
-            <img src="img6.jpg" alt="Товар 6">
-            <div class="container">
-                <h4><b>Товар 6</b></h4>
-                <p>Описание товара 6</p>
-            </div>
-        </a>
-    </div>
-    <div class="card">
-        <a href="ссылка-на-страницу-товара7" class="card-link">
-            <img src="img7.jpg" alt="Товар 7">
-            <div class="container">
-                <h4><b>Товар 7</b></h4>
-                <p>Описание товара 7</p>
-            </div>
-        </a>
-    </div><div class="card">
-        <a href="ссылка-на-страницу-товара8" class="card-link">
-            <img src="img8.jpg" alt="Товар 8">
-            <div class="container">
-                <h4><b>Товар 8</b></h4>
-                <p>Описание товара 8</p>
-            </div>
-        </a>
-    </div><div class="card">
-        <a href="ссылка-на-страницу-товара9" class="card-link">
-            <img src="img9.jpg" alt="Товар 9">
-            <div class="container">
-                <h4><b>Товар 9</b></h4>
-                <p>Описание товара 9</p>
-            </div>
-        </a>
-    </div><div class="card">
-        <a href="ссылка-на-страницу-товара10" class="card-link">
-            <img src="img10.jpg" alt="Товар 10">
-            <div class="container">
-                <h4><b>Товар 10</b></h4>
-                <p>Описание товара 10</p>
-            </div>
-        </a>
-    </div>
-	<div class="card">
-        <a href="ссылка-на-страницу-товара11" class="card-link">
-            <img src="img11.jpg" alt="Товар 11">
-            <div class="container">
-                <h4><b>Товар 11</b></h4>
-                <p>Описание товара 11</p>
-            </div>
-        </a>
-    </div>
-	<div class="card">
-        <a href="ссылка-на-страницу-товара12" class="card-link">
-            <img src="img12.jpg" alt="Товар 12">
-            <div class="container">
-                <h4><b>Товар 12</b></h4>
-                <p>Описание товара 12</p>
-            </div>
-        </a>
-    </div><div class="card">
-        <a href="ссылка-на-страницу-товара13" class="card-link">
-            <img src="img13.jpg" alt="Товар 13">
-            <div class="container">
-                <h4><b>Товар 13</b></h4>
-                <p>Описание товара 13</p>
-            </div>
-        </a>
-    </div><div class="card">
-        <a href="ссылка-на-страницу-товара14" class="card-link">
+<a href="ссылка-на-страницу-товара14" class="card-link">
             <img src="img14.jpg" alt="Товар 14">
             <div class="container">
-                <h4><b>Товар 14</b></h4>
-                <p>Описание товара 14</p>
+                <h4><b>Шорты</b></h4>
+                <p>Шорты ниже колена джинсовые</p>
             </div>
         </a>
     </div><div class="card">
         <a href="ссылка-на-страницу-товара15"class="card-link">
             <img src="img15.jpg" alt="Товар 15">
             <div class="container">
-                <h4><b>Товар 15</b></h4>
-                <p>Описание товара 15</p>
+                <h4><b>Топ</b></h4>
+                <p>Топ на бретелях</p>
             </div>
         </a>
     </div><div class="card">
         <a href="ссылка-на-страницу-товара16"class="card-link">
             <img src="img16.jpg" alt="Товар 16">
             <div class="container">
-                <h4><b>Товар 16</b></h4>
-                <p>Описание товара 16</p>
+                <h4><b>Комлект двойка</b></h4>
+                <p>Комплект двойка с топом и юбкой</p>
             </div>
         </a>
     </div><div class="card">
         <a href="ссылка-на-страницу-товара17" class="card-link">
             <img src="img17.jpg" alt="Товар 17">
             <div class="container">
-                <h4><b>Товар 17</b></h4>
-                <p>Описание товара 17</p>
+                <h4><b>Топ</b></h4>
+                <p>Топ на бретелях</p>
             </div>
         </a>
     </div><div class="card">
         <a href="ссылка-на-страницу-товара18" class="card-link">
             <img src="img18.jpg" alt="Товар 18">
             <div class="container">
-                <h4><b>Товар 18</b></h4>
-                <p>Описание товара 18</p>
+                <h4><b>Юбка</b></h4>
+                <p>Юбка миди</p>
             </div>
         </a>
     </div><div class="card">
         <a href="ссылка-на-страницу-товара19" class="card-link">
             <img src="img19.jpg" alt="Товар 19">
             <div class="container">
-                <h4><b>Товар 19</b></h4>
-                <p>Описание товара 19</p>
+                <h4><b>Топ</b></h4>
+                <p>Топ женский с принтом</p>
             </div>
         </a>
     </div><div class="card">
         <a href="ссылка-на-страницу-товара20" class="card-link">
             <img src="img20.jpg" alt="Товар 20">
             <div class="container">
-                <h4><b>Товар 20</b></h4>
-                <p>Описание товара 20</p>
+                <h4><b>Платье</b></h4>
+                <p>Платье макси</p>
             </div>
         </a>
     </div>
