--- a/katalog.html
+++ b/katalog.html
@@ -1,35 +1,123 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <header>
-    <div class="top-bar">
-    <div class="logo-container">
-    <a href="главная.html">
-        <img src="logo.png" alt="Whimsy Logo">
-    </a>
-</div>
-    <nav class="menu">
-        <ul>
-            <li><a href="katalog.html">Каталог</a></li>
-            <li><a href="individual-order.html">Индивидуальный заказ</a></li>
-            <li><a href="about-us.html">О нас</a></li>
-        </ul>
-    </nav>
-    <div class="cart-icon">
-        <img src="cart.png" alt="Shopping Cart" onclick="location.href='korzina.html';">
+<div class="popular-section">
+    <!-- Карточка 1 -->
+    <div class="card">
+        <a href="ссылка-на-страницу-товара1" class="card-link">
+            <img src="img1.jpg" alt="Товар 1">
+            <div class="container">
+                <h4><b>Комплект двойка</b></h4>
+                <p>Комплект двойка с юбкой и топом</p>
+            </div>
+        </a>
     </div>
-</div>
-</header>
-<div class="space">
-</div>
-    <div class="popular-section-h2">
-    <h2>Каталог</h2>
-</div>
+    <!-- Карточка 2 -->
+    <div class="card">
+        <a href="ссылка-на-страницу-товара2"class="card-link">
+            <img src="img2.jpg" alt="Товар 2">
+            <div class="container">
+                <h4><b>Топ</b></h4>
+                <p>Полупрозрачный топ</p>
+            </div>
+        </a>
+    </div>
+    <!-- Карточка 3 -->
+    <div class="card">
+        <a href="ссылка-на-страницу-товара3"class="card-link">
+            <img src="img3.jpg" alt="Товар 3">
+            <div class="container">
+                <h4><b>Худи</b></h4>
+                <p>Худи оверсайз цвета хаки</p>
+            </div>
+        </a>
+    </div>
+    <!-- Карточка 4 -->
+    <div class="card">
+        <a href="ссылка-на-страницу-товара4" class="card-link">
+            <img src="img4.jpg" alt="Товар 4">
+            <div class="container">
+                <h4><b>Джинсы</b></h4>
+                <p>Джинсы с эффектом потертости</p>
+            </div>
+        </a>
+    </div>
+    <!-- Карточка 5 -->
+    <div class="card">
+        <a href="ссылка-на-страницу-товара5" class="card-link">
+            <img src="img5.jpg" alt="Товар 5">
+            <div class="container">
+                <h4><b>Топ</b></h4>
+                <p>Топ с искуственной кожи</p>
+            </div>
+        </a>
+    </div>
+    <!-- Карточка 6 -->
+    <div class="card">
+        <a href="ссылка-на-страницу-товара6" class="card-link">
+            <img src="img6.jpg" alt="Товар 6">
+            <div class="container">
+                <h4><b>Топ</b></h4>
+                <p>Топ с регулируемой длиной</p>
+            </div>
+        </a>
+    </div>
+    <div class="card">
+        <a href="ссылка-на-страницу-товара7" class="card-link">
+            <img src="img7.jpg" alt="Товар 7">
+            <div class="container">
+                <h4><b>Топ</b></h4>
+                <p>Полупрозрачный двойной топ</p>
+            </div>
+        </a>
+    </div><div class="card">
+        <a href="ссылка-на-страницу-товара8" class="card-link">
+            <img src="img8.jpg" alt="Товар 8">
+            <div class="container">
+                <h4><b>Свитер</b></h4>
+                <p>Свитер с натуральной шерсти</p>
+            </div>
+        </a>
+    </div><div class="card">
+        <a href="ссылка-на-страницу-товара9" class="card-link">
+            <img src="img9.jpg" alt="Товар 9">
+            <div class="container">
+                <h4><b>Топ</b></h4>
+                <p>Белый топ корсетного типа</p>
+            </div>
+        </a>
+    </div><div class="card">
+        <a href="ссылка-на-страницу-товара10" class="card-link">
+            <img src="img10.jpg" alt="Товар 10">
+            <div class="container">
+                <h4><b>Куртка</b></h4>
+                <p>Куртка с регулироемой длиной</p>
+            </div>
+        </a>
+    </div>
+ <div class="card">
+        <a href="ссылка-на-страницу-товара11" class="card-link">
+            <img src="img11.jpg" alt="Товар 11">
+            <div class="container">
+                <h4><b>Юбка</b></h4>
+                <p>Юбка макси джинсовая</p>
+            </div>
+        </a>
+    </div>
+ <div class="card">
+        <a href="ссылка-на-страницу-товара12" class="card-link">
+            <img src="img12.jpg" alt="Товар 12">
+            <div class="container">
+                <h4><b>Топ</b></h4>
+                <p>Топ из черной джинсы</p>
+            </div>
+        </a>
+    </div><div class="card">
+        <a href="ссылка-на-страницу-товара13" class="card-link">
+            <img src="img13.jpg" alt="Товар 13">
+            <div class="container">
+                <h4><b>Рубашка</b></h4>
+                <p>Хлопковая рубашка</p>
+            </div>
+        </a>
+    </div><div class="card">
 <a href="ссылка-на-страницу-товара14" class="card-link">
             <img src="img14.jpg" alt="Товар 14">
             <div class="container">
