--- a/katalog.html
+++ b/katalog.html
@@ -125,16 +125,18 @@
             </div>
         </a>
     </div>
-	<div class="card">
+ <div class="card">
         <a href="ссылка-на-страницу-товара11" class="card-link">
-            <img src="img11.jpg" alt="Товар 11">
+            <img src="img11.jpg" alt="Това
+
+р 11">
             <div class="container">
                 <h4><b>Товар 11</b></h4>
                 <p>Описание товара 11</p>
             </div>
         </a>
     </div>
-	<div class="card">
+ <div class="card">
         <a href="ссылка-на-страницу-товара12" class="card-link">
             <img src="img12.jpg" alt="Товар 12">
             <div class="container">
