--- a/katalog.html
+++ b/katalog.html
@@ -35,40 +35,40 @@
     <!-- Карточка 1 -->
     <div class="card">
         <a href="ссылка-на-страницу-товара1" class="card-link">
-            <img src="img1.jpg" alt="Товар 1">
+            <img src="img1.jpg" alt="Комплект двойка">
             <div class="container">
-                <h4><b>Товар 1</b></h4>
-                <p>Описание товара 1</p>
+                <h4><b>Комплект двойка</b></h4>
+                <p>Комплект двойка с юбкой и топом</p>
             </div>
         </a>
     </div>
     <!-- Карточка 2 -->
     <div class="card">
         <a href="ссылка-на-страницу-товара2"class="card-link">
-            <img src="img2.jpg" alt="Товар 2">
+            <img src="img2.jpg" alt="Топ">
             <div class="container">
-                <h4><b>Товар 2</b></h4>
-                <p>Описание товара 2</p>
+                <h4><b>Топ</b></h4>
+                <p>Полупрозрачный топ</p>
             </div>
         </a>
     </div>
     <!-- Карточка 3 -->
     <div class="card">
         <a href="ссылка-на-страницу-товара3"class="card-link">
-            <img src="img3.jpg" alt="Товар 3">
+            <img src="img3.jpg" alt="Худи">
             <div class="container">
-                <h4><b>Товар 3</b></h4>
-                <p>Описание товара 3</p>
+                <h4><b>Худи</b></h4>
+                <p>Худи оверсайз цвета хаки</p>
             </div>
         </a>
     </div>
     <!-- Карточка 4 -->
     <div class="card">
         <a href="ссылка-на-страницу-товара4" class="card-link">
-            <img src="img4.jpg" alt="Товар 4">
+            <img src="img4.jpg" alt="Джинсы">
             <div class="container">
-                <h4><b>Товар 4</b></h4>
-                <p>Описание товара 4</p>
+                <h4><b>Джинсы</b></h4>
+                <p>Джинсы с эффектом потертости</p>
             </div>
         </a>
     </div>
