--- a/katalog.html
+++ b/katalog.html
@@ -75,137 +75,135 @@
     <!-- Карточка 5 -->
     <div class="card">
         <a href="ссылка-на-страницу-товара5" class="card-link">
-            <img src="img5.jpg" alt="Товар 5">
+            <img src="img5.jpg" alt="Топ">
             <div class="container">
-                <h4><b>Товар 5</b></h4>
-                <p>Описание товара 5</p>
+                <h4><b>Топ</b></h4>
+                <p>Топ из искуственной кожи</p>
             </div>
         </a>
     </div>
     <!-- Карточка 6 -->
     <div class="card">
         <a href="ссылка-на-страницу-товара6" class="card-link">
-            <img src="img6.jpg" alt="Товар 6">
+            <img src="img6.jpg" alt="Топ">
             <div class="container">
-                <h4><b>Товар 6</b></h4>
-                <p>Описание товара 6</p>
+                <h4><b>Топ</b></h4>
+                <p>Топ с регулируемой длиной</p>
             </div>
         </a>
     </div>
     <div class="card">
         <a href="ссылка-на-страницу-товара7" class="card-link">
-            <img src="img7.jpg" alt="Товар 7">
+            <img src="img7.jpg" alt="Топ">
             <div class="container">
-                <h4><b>Товар 7</b></h4>
-                <p>Описание товара 7</p>
+                <h4><b>Топ</b></h4>
+                <p>Полупрозрачный двойной топ</p>
             </div>
         </a>
     </div><div class="card">
         <a href="ссылка-на-страницу-товара8" class="card-link">
-            <img src="img8.jpg" alt="Товар 8">
+            <img src="img8.jpg" alt="Свитер">
             <div class="container">
-                <h4><b>Товар 8</b></h4>
-                <p>Описание товара 8</p>
+                <h4><b>Свитер</b></h4>
+                <p>Свитер с натуральной шерсти</p>
             </div>
         </a>
     </div><div class="card">
         <a href="ссылка-на-страницу-товара9" class="card-link">
-            <img src="img9.jpg" alt="Товар 9">
+            <img src="img9.jpg" alt="Топ">
             <div class="container">
-                <h4><b>Товар 9</b></h4>
-                <p>Описание товара 9</p>
+                <h4><b>Топ</b></h4>
+                <p>Белый топ корсетного типа</p>
             </div>
         </a>
     </div><div class="card">
         <a href="ссылка-на-страницу-товара10" class="card-link">
-            <img src="img10.jpg" alt="Товар 10">
+            <img src="img10.jpg" alt="Куртка">
             <div class="container">
-                <h4><b>Товар 10</b></h4>
-                <p>Описание товара 10</p>
+                <h4><b>Куртка</b></h4>
+                <p>Куртка с регулироемой длиной</p>
             </div>
         </a>
     </div>
  <div class="card">
         <a href="ссылка-на-страницу-товара11" class="card-link">
-            <img src="img11.jpg" alt="Това
-
-р 11">
+            <img src="img11.jpg" alt="Юбка11">
             <div class="container">
-                <h4><b>Товар 11</b></h4>
-                <p>Описание товара 11</p>
+                <h4><b>Юбка</b></h4>
+                <p>Юбка макси джинсовая</p>
             </div>
         </a>
     </div>
  <div class="card">
         <a href="ссылка-на-страницу-товара12" class="card-link">
-            <img src="img12.jpg" alt="Товар 12">
+            <img src="img12.jpg" alt="Топ">
             <div class="container">
-                <h4><b>Товар 12</b></h4>
-                <p>Описание товара 12</p>
+                <h4><b>Топ</b></h4>
+                <p>Топ из черной джинсы</p>
             </div>
         </a>
     </div><div class="card">
         <a href="ссылка-на-страницу-товара13" class="card-link">
-            <img src="img13.jpg" alt="Товар 13">
+            <img src="img13.jpg" alt="Рубашка">
             <div class="container">
-                <h4><b>Товар 13</b></h4>
-                <p>Описание товара 13</p>
+                <h4><b>Рубашка</b></h4>
+                <p>Хлопковая рубашка</p>
             </div>
         </a>
     </div><div class="card">
         <a href="ссылка-на-страницу-товара14" class="card-link">
-            <img src="img14.jpg" alt="Товар 14">
+            <img src="img14.jpg" alt="Шорты">
             <div class="container">
-                <h4><b>Товар 14</b></h4>
-                <p>Описание товара 14</p>
+                <h4><b>Шорты</b></h4>
+                <p>Шорты ниже колена джинсовые</p>
             </div>
         </a>
     </div><div class="card">
         <a href="ссылка-на-страницу-товара15"class="card-link">
-            <img src="img15.jpg" alt="Товар 15">
+            <img src="img15.jpg" alt="Топ">
             <div class="container">
-                <h4><b>Товар 15</b></h4>
-                <p>Описание товара 15</p>
+                <h4><b>Топ</b></h4>
+                <p>Топ на бретелях</p>
             </div>
         </a>
     </div><div class="card">
         <a href="ссылка-на-страницу-товара16"class="card-link">
-            <img src="img16.jpg" alt="Товар 16">
+            <img src="img16.jpg" alt="Комлект двойка">
             <div class="container">
-                <h4><b>Товар 16</b></h4>
-                <p>Описание товара 16</p>
+                <h4><b>Комлект двойка</b></h4>
+                <p>Комплект двойка с топом и юбкой</p>
             </div>
         </a>
     </div><div class="card">
         <a href="ссылка-на-страницу-товара17" class="card-link">
-            <img src="img17.jpg" alt="Товар 17">
+            <img src="img17.jpg" alt="Топ">
             <div class="container">
-                <h4><b>Товар 17</b></h4>
-                <p>Описание товара 17</p>
+                <h4><b>Топ</b></h4>
+                <p>Топ на бретелях</p>
             </div>
         </a>
     </div><div class="card">
         <a href="ссылка-на-страницу-товара18" class="card-link">
-            <img src="img18.jpg" alt="Товар 18">
+            <img src="img18.jpg" alt="Юбка">
             <div class="container">
-                <h4><b>Товар 18</b></h4>
-                <p>Описание товара 18</p>
+                <h4><b>Юбка</b></h4>
+                <p>Юбка миди</p>
             </div>
         </a>
     </div><div class="card">
         <a href="ссылка-на-страницу-товара19" class="card-link">
-            <img src="img19.jpg" alt="Товар 19">
+            <img src="img19.jpg" alt="Топ">
             <div class="container">
-                <h4><b>Товар 19</b></h4>
-                <p>Описание товара 19</p>
+                <h4><b>Топ</b></h4>
+                <p>Топ женский с принтом</p>
             </div>
         </a>
     </div><div class="card">
         <a href="ссылка-на-страницу-товара20" class="card-link">
-            <img src="img20.jpg" alt="Товар 20">
+            <img src="img20.jpg" alt="Платье">
             <div class="container">
-                <h4><b>Товар 20</b></h4>
-                <p>Описание товара 20</p>
+                <h4><b>Платье</b></h4>
+                <p>Платье макси</p>
             </div>
         </a>
     </div>
