--- a/katalog.html
+++ b/katalog.html
@@ -121,7 +121,7 @@
             <img src="img10.jpg" alt="Куртка">
             <div class="container">
                 <h4><b>Куртка</b></h4>
-                <p>Куртка с регулироемой длиной</p>
+                <p>хуй</p>
             </div>
         </a>
     </div>
