--- a/about-us.html
+++ b/about-us.html
@@ -25,6 +25,8 @@
     </div>
 </div>
 </header>
+    <div class=space></div>
+    
 <div class="info">
         <section class="why-us">
             <h2>Почему мы?</h2>
