--- a/about-us.html
+++ b/about-us.html
@@ -32,7 +32,7 @@
             <h2>Почему мы?</h2>
             <p>Мы-онлайн ателье.</p>
 
-<p> воплотить любую вашу мечту в реальность.</p>
+<p>Готовы воплотить любую вашу мечту в реальность.</p>
 
 <p>Дизайнеры лично разбирают ваши пожелания и вместе с вами утверждают референсы. Портные работают с усердием и вниманием к деталям, подбирают нужный материал и исполняют любой ваш каприз.</p>
 
@@ -45,7 +45,7 @@
         </section>
         <section class="location">
     <h2>Где находимся</h2>
-    <p>Наш офис расположен в сердце города, что делает нас легко доступными для всех наших клиентов и партнеров.</p>
+    <p>Наш офис расположен в центре города, что делает нас легко доступными для всех наших клиентов и партнеров.</p>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2482.460547067595!2d-0.12744675037144707!3d51.50735096490219!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDHCsDE2JzE0LjQiTiAxMMKwMjgnMzUuMSJF!5e0!3m2!1sen!2suk!4v1634300570625!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 </section>
 
